# second-brain

./: .gitignore  README.md  config.example.yaml  mcp.json  pyproject.toml
.github/prompts/: categorize-inbox.prompt.md  daily-review.prompt.md  second-brain.prompt.md  sync-all.prompt.md
src/second_brain/: __init__.py  __main__.py  config.py  models.py  para_framework.py  search.py  server.py
src/second_brain/agents/: categorizer.py  connector_agent.py  summarizer.py
src/second_brain/connectors/: __init__.py  ado.py  base.py  bookmarks.py  onedrive.py  teams.py  telegram_bot.py
src/second_brain/formatters/: __init__.py  categorizer.py  connector_agent.py  summarizer.py
src/second_brain/storage/: __init__.py  base.py  github_storage.py  local_storage.py
src/second_brain/tools/: __init__.py  crud.py  para.py  sync.py
